Add PDF upload, batch analysis, history storage, and enhanced UI components

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@types/multer": "^2.0.0",
+    "multer": "^2.0.2"
   }
 }
